--- a/movie/static/css/style.css
+++ b/movie/static/css/style.css
@@ -1,9 +1,11 @@
 @charset "utf-8";
 /* CSS Document */
 body{background: #000; font-family: 'Microsoft YaHei'}
-#head{margin: 0 auto; width: 1000px }
-#middle{width: 1000px; margin: 0 auto}
-#foot{margin: 0 auto; width: 1000px}
+.head{margin: 0 auto; width: 1000px }
+.middle{width: 1000px; margin: 0 auto}
+.foot{margin: 0 auto; width: 1000px}
+.left{width:800px; float:left}
+.right{width:180px; float:right}
 
 .nav{background: #2a2a2a; clear: both; padding: 10px 2px}
 .nav a{color: #bbbbbb; text-decoration: none}
@@ -11,4 +13,7 @@ body{background: #000; font-family: 'Microsoft YaHei'}
 .nav_box{width: 580px; float: left; padding:0 0 0 10px}
 .nav ul{list-style: none; clear: both; padding: 0; margin: 5px 0; display: block; border-right:#222 1px solid}
 .nav ul li{float:left; color: #eee; margin-right: 10px; }
+.movie_list{list-style:none}
+.movie_list li{float:left; width:160px;}
+
 .small{clear: both; float: none}
